Mon premier commit sur ma_branche

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">AndroidERestaurant</string>
     <string name="title_activity_test">test</string>
+    <string name="title_activity_menu">MenuActivity</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_category">CategoryActivity</string>
 </resources>
